<resources>
    <string name="app_name">board</string>
    <string name="write">글쓰기</string>
    <string name="title">제목</string>
    <string name="ctnt">내용</string>
    <string name="writer">작성자</string>
    <string name="btDel">삭제</string>
    <string name="btUpt">수정</string>
    <string name="title2">제목 :</string>
    <string name="write2">작성자 :</string>
    <string name="wday">작성일시 :</string>


</resources>